--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -118,8 +118,8 @@
                 </ul>
                 <div class="container pl-0 pr-0">
                     <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
-                        <a class="btn btn-primary mr-2" href="/open-account">Rekening Openen</a>
-<!--                        <a class="btn btn-primary mr-2" href="/registratie">Klant worden</a>-->
+                        <a class="btn btn-primary mr-2" href="/openaccount">Rekening Openen</a>
+                        <!--                        <a class="btn btn-primary mr-2" href="/registratie">Klant worden</a>-->
                         <a class="btn btn-outline-primary mr-2" href="/">Uitloggen</a>
                     </div>
 
@@ -148,11 +148,12 @@
         <a class="navbar-brand">
             <img src="images/DROVN BANK_1-02.png" width="70" height="70"
                  class="d-inline-block align-top" alt=""></a>
-    <div class="container pl-0 pr-0">
-        <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
-            <a class="btn btn-outline-primary float-right" id="uitloggenemployee" href="/loginemployee">Uitloggen</a>
+        <div class="container pl-0 pr-0">
+            <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
+                <a class="btn btn-outline-primary float-right" id="uitloggenemployee"
+                   href="/loginemployee">Uitloggen</a>
+            </div>
         </div>
-    </div>
     </nav>
 </header>
 
@@ -165,6 +166,23 @@
         </div>
     </nav>
 </header>
+
+
+<header class="header" id="openAccount" th:fragment="head-openAccount">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+        <a class="navbar-brand">
+            <img src="images/DROVN BANK_1-02.png" width="80" height="80"
+                 class="d-inline-block align-top" alt=""></a>
+        <div class="float-right">
+        <form method="get" th:action="@{/customer-with-accounts}">
+            <input type="button" class="btn btn-primary" value="Annuleren">
+        </form>
+        </div>
+        <div class="container pl-0 pr-0">
+        </div>
+    </nav>
+</header>
+
 
 </body>
 </html>
