--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -34,4 +34,35 @@
     </div>
 </div>
 
+<div class="modal fade" id="confirmationNewAccount" tabindex="-1" th:fragment="modal-confirmationNewAccount">
+<div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="confirmationModal">Gelukt!</h5>
+        </div>
+        <div class="modal-body">
+            Uw nieuwe rekening is toegevoegd aan uw account
+        </div>
+        <div class="modal-footer">
+            <button> <a th:href="@{pages/account-overview}" type="button" class="btn btn-secondary" data-dismiss="modal">Terug naar rekeningoverzicht</a></button>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Nog een rekening openen?"></button>
+            <span aria-hidden="true">&times;</span>
+        </div>
+    </div>
+</div>
+</div>
+
+<div class="modal fade" id="termsConditions" tabindex="-1" th:fragment="modal-termsConditions" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" >Algemene voorwaarden </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Sluiten">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 </html>
