--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -2,6 +2,7 @@
 <html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head th:replace="fragments/head :: head-openAccount (pageTitle='Rekening Openen', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
+
 <div class="jumbotron jumbotron-fluid"
      style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0) ), url('/images/DROVN5.svg'); background-position: left center; background-repeat: no-repeat; background-size: cover; width: 100%; max-height: 60%">
     <div id="header" class="row header-default">
@@ -19,15 +20,17 @@
                         <form action="/saveaccount" method="post" name="ibanForm"> <!--class="needs-validation"!-->
                             <input type="text" th:field="*{customer.customerID}" value="customer.customerID" hidden/>
 
-                            <div class="form-group w-25">
+                            <div class="form-group row">
                                 <label for="ibanGenerator">Uw nieuwe rekeningnummer: </label>
                                 <input type="text" th:field="*{account.iban}" id="ibanGenerator"
                                        placeholder="IBAN" readonly required/>
+                                </div>
                             </div>
-                            <div class="form-group w-25">
+                            <div class="form-group row">
                                 <label for="balance">Uw huidige saldo:</label>
                                 <input type="text" th:field="*{account.balance}" id="balance" class="form-control"
                                        placeholder="Saldo" readonly/>
+                                </div>
                             </div>
                             <div class="form-group form-check">
                                 <p>
@@ -37,10 +40,14 @@
                                 <input type="checkbox" id="terms" required> Ik heb de algemene voorwaarden gelezen en ik
                                 ga
                                 hiermee akkoord
-                                <div class="button-group">
-                                    <button type="submit" id="submit" class="btn btn-primary" data-toggle="modal"
-                                            data-target="#confirmationNewAccount">Bevestigen
-                                    </button>
+                                <div class="row">
+                                <div class="col-md-auto">
+                                    <input type="submit" id="submit" class="btn btn-primary" value="Bevestigen" data-toggle="modal"
+                                            data-target="#confirmationNewAccount">
+                                </div>
+                                    <div class="col-md-auto">
+                                    <input type="button" class="btn btn-primary" th:href="@{pages/account-overview}" value="Annuleren">
+                                    </div>
                                 </div>
                             </div>
                         </form>
