--- a/src/main/resources/templates/fragments/main-content.html
+++ b/src/main/resources/templates/fragments/main-content.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="nl" xmlns:th="http://www.thymeleaf.org">
+<html lang="nl" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
 <div class="container pt-5" th:fragment="content-home">
     <div class="row">
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
-                tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
-                malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            <h2 style="color: #F39200">Samen uw bankzaken regelen</h2>
+            <p style="color: #312783">Met uw gezamenlijke rekening regelt u makkelijk uw dagelijkse bankzaken.
+                Bijvoorbeeld het aanpassen van uw betaallimiet. Online is het zo geregeld!</p>
+            <p><a class="btn btn-outline-primary btn-block" href="#" role="button">Online bankzaken regelen »</a></p>
         </div>
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
-                tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
-                malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            <h2 style="color: #F39200">Uw bankzaken zo geregeld</h2>
+            <p style="color: #312783">Bellen om uw pas te deblokkeren? Of om een schade te melden? Dat is helemaal niet meer
+                nodig. In de DROVN app of in Internet Bankieren regelt u alledaagse bankzaken simpel zelf.</p>
+            <p><a class="btn btn-outline-primary btn-block" href="#" role="button">Regel het simpel zelf »</a></p>
         </div>
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum
-                id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            <h2 style="color: #F39200">Regel uw bankzaken online</h2>
+            <p style="color: #312783">Wilt u uw betaallimiet wijzigen of uw pas blokkeren? Dit soort bankzaken regelt u zelf gewoon
+                online. Wel zo makkelijk.</p>
+            <br>
+            <p><a class="btn btn-outline-primary btn-block" href="#" role="button">Direct online regelen »</a></p>
         </div>
     </div>
 </div>
@@ -104,4 +102,133 @@
     </div>
 </div>
 
+<div class="container pt-5" th:fragment="content-mutations">
+    <div class="row">
+        <div class="col-md-4">
+            <p action="#" method="get" th:action="@{/do-transaction/}" th:object="${customerWithAccountOverview}">
+                <a class="btn btn-primary btn-lg btn-block" style="font-size: 125%; width: 100%" th:href="@{/do-transaction/}" role="button"
+                >Geld overboeken »</a></p>
+            <p action="#" method="post" th:action="@{/customer-with-accounts}" th:object="${customerWithAccountOverview}">
+                <a class="btn btn-primary btn-lg btn-block" style="font-size: 125%; width: 100%" th:href="@{/customer-with-accounts}" role="button"
+                >« Terug naar Rekeningoverzicht</a></p>
+            </p>
+        </div>
+
+        <div class="col-md-8">
+            <div class="container pt-0" th:each="t : ${account.getTransactions}" >
+
+                <!--Accordion wrapper-->
+                <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="false" th:each="date :${t.showDate}">
+
+                    <!-- Accordion card -->
+                    <div class="card"  style="border-color: #312783;border-width: medium
+                         ;background-color: white">
+
+                        <!-- Card header -->
+                        <div class="card-header" role="tab" id="transaction" >
+                            <a data-toggle="collapse" href="#collapse" aria-expanded="false"
+                               aria-controls="collapseOne1">
+                                <h4> <span class="mb-0" style="color: #F39200"  th:text="${date}">Datum></span>
+                                <i class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200"></i>
+                                </h4>
+                                <h5>
+                                    <dl class="row">
+                                        <dt class="col-md-10" style="color: #312783" th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}" ></dt>
+                                        <dd class="col-md-2; float-md-right" style="color: #312783" th:each="amount :${t.showAmount}"th:text="${amount}"></dd>
+                                    </dl>
+                                </h5>
+                            </a>
+                        </div>
+
+                        <!-- Card body -->
+                        <div id="collapse" class="collapse hide" role="tabpanel" aria-labelledby="heading">
+                            <div class="card-body" style="background-color: rgba(243, 146, 0, 0.2)">
+                                <p style="color: #312783" th:text="${t.showTransactionDetails()}"></p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- Accordion card -->
+
+                </div>
+                <!-- Accordion wrapper -->
+               <br>
+
+
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+<div class="container pt-5" th:fragment="content-account-overview">
+    <div class="row">
+        <div class="col-md-4">
+            <p action="#" method="get" th:action="@{/do-transaction/}" th:object="${customerWithAccountOverview}">
+                <a class="btn btn-primary btn-lg btn-block" style="font-size: 125%; width: 100%" th:href="@{/do-transaction/}" role="button"
+                >Geld overboeken »</a></p>
+            <p action="#" method="post" th:action="@{/customer-with-accounts}" th:object="${customerWithAccountOverview}">
+                <a class="btn btn-primary btn-lg btn-block" style="font-size: 125%; width: 100%" th:href="@{/customer-with-accounts}" role="button"
+                >« Terug naar de Homepagina</a></p>
+            </p>
+        </div>
+
+
+
+        <div class="col-md-8">
+
+            <div class="container pt-0" style="border-color: #312783; border-width: medium;
+                        background-color: white">
+                <p style="font-size: 125%" align="center" th:if="${account.getTransactions().isEmpty(}">
+                Er zijn geen bij- en afschrijvingen om weer te geven</p>
+
+            <div class="container pt-0" style="border-color: #312783;border-width: medium;
+                         background-color: white"  th:unless="${account.getTransactions().isEmpty()}"
+                 th:object="${account}">
+
+                <!--Accordion wrapper-->
+                <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="false" th:each="t : ${account.getTransactions}" >
+
+                    <!-- Accordion card -->
+                    <div class="card"  style="border-color: #312783;border-width: medium
+                         ;background-color: white" th:each="date :${t.showDate}">
+
+                        <!-- Card header -->
+                        <div class="card-header" role="tab" id="transaction" >
+                            <a data-toggle="collapse" href="#collapse" aria-expanded="false"
+                               aria-controls="collapseOne1">
+                                <h4> <span class="mb-0" style="color: #F39200"  th:text="${date}">Datum></span>
+                                    <i class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200"></i>
+                                </h4>
+                                <h5>
+                                    <dl class="row">
+                                        <dt class="col-md-10" style="color: #312783" th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}" ></dt>
+                                        <dd class="col-md-2; float-md-right" style="color: #312783" th:each="amount :${t.showAmount}"th:text="${amount}"></dd>
+                                    </dl>
+                                </h5>
+                            </a>
+                        </div>
+
+                        <!-- Card body -->
+                        <div id="collapse" class="collapse hide" role="tabpanel" aria-labelledby="heading">
+                            <div class="card-body" style="background-color: rgba(243, 146, 0, 0.2)">
+                                <p style="color: #312783" th:text="${t.showTransactionDetails()}"></p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- Accordion card -->
+
+                </div>
+                <!-- Accordion wrapper -->
+                <br>
+
+
+            </div>
+
+        </div>
+
+    </div>
+</div>
 </html>
