--- a/src/main/resources/templates/fragments/main.html
+++ b/src/main/resources/templates/fragments/main.html
@@ -21,4 +21,9 @@
     <div th:replace="fragments/main-content :: content-confirmation-private"></div>
 </main>
 
+<main class="min-vw-100" role="main" th:fragment="main-mutations">
+    <div th:replace="fragments/jumbotron :: jumbotron-mutations"></div>
+    <div th:replace="fragments/main-content :: content-mutations"></div>
+</main>
+
 </html>
