--- a/src/main/resources/templates/pages/employee-dashboard-legal.html
+++ b/src/main/resources/templates/pages/employee-dashboard-legal.html
@@ -43,7 +43,7 @@
                                 <td th:text="${lp.iban}"></td>
                                 <td th:text="${lp.balance}"></td>
                                 <td> <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target=".bd-example-modal-lg"
-                                             th:onclick="showMoreInfo([[${lp.kvkNumber}]],[[${lp.address}]],[[${lp.accountmanager}]])">Meer info</button>
+                                             th:onclick="showMoreInfo([[${lp.kvkNumber}]],[[${lp.address}]],[[${lp.getFullName()}]])">Meer info</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -81,7 +81,7 @@
                                 <td th:text="${m.companyName}"></td>
                                 <td th:text="${m.numberOfTransactions}"></td>
                                 <td> <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target=".bd-example-modal-lg"
-                                             th:onclick="showMoreInfo([[${m.kvkNumber}]],[[${m.address}]],[[${m.accountmanager}]])">Meer info</button>
+                                             th:onclick="showMoreInfo([[${m.kvkNumber}]],[[${m.address}]],[[${m.getFullName()}]])">Meer info</button>
                                 </td>
                             </tr>
                             </tbody>
