clickable logo in login

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -158,7 +158,7 @@
 
 <header class="header" id="login" th:fragment="head-login">
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-        <a class="navbar-brand">
+        <a class="navbar-brand" href="/">
             <img src="images/DROVN BANK_1-02.png" width="80" height="80"
                  class="d-inline-block align-top" alt=""></a>
         <div class="container pl-0 pr-0">
