--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -46,7 +46,7 @@
         <div class="modal-footer">
             <form action="#" method="get" th:action="@{/customer-with-accounts}">
                 <div class="col-md-4">
-                    <input type="submit" class="btn btn-primary" value="Terug">
+                    <input type="submit" class="btn btn-primary" value="Rekeningoverzicht">
                 </div>
             </form>
             <button type="button" class="close" data-dismiss="modal" aria-label="Nog een rekening openen?"></button>
