--- a/src/main/resources/templates/fragments/main.html
+++ b/src/main/resources/templates/fragments/main.html
@@ -26,4 +26,8 @@
     <div th:replace="fragments/main-content :: content-mutations"></div>
 </main>
 
+<main class="min-vw-100" role="main" th:fragment="main-accounts">
+<div th:replace="fragments/jumbotron :: jumbotron-accounts"></div>
+<div th:replace="fragments/main-content :: content-mutations"></div>
+</main>
 </html>
