--- a/src/main/resources/templates/pages/account_details.html
+++ b/src/main/resources/templates/pages/account_details.html
@@ -14,7 +14,9 @@
         <footer th:replace="fragments/footer :: footer-default"></footer>
     </div>
 </div>
+</body>
 
+</html>
 
 
 
@@ -31,8 +33,8 @@
 <!--                    </style>-->
 
 <!--                    <table style="width: 100%; "  class="fold-table; container-fluid" data-sort-name="Date" data-sort-order="desc"-->
-                           th:unless="${account.getTransactions().isEmpty()}"
-                           th:object="${account}">
+<!--                           th:unless="${account.getTransactions().isEmpty()}"-->
+<!--                           th:object="${account}">-->
 <!--                        <thead class="text-white" bgcolor="#312783">-->
 
 <!--                        <tr style="font-size: 150%">-->
@@ -60,7 +62,4 @@
 <!--                    </table>-->
 
 
-</body>
 
-
-</html>
