--- a/src/main/resources/templates/fragments/form.html
+++ b/src/main/resources/templates/fragments/form.html
@@ -9,24 +9,24 @@
     </div>
     <div class="col-lg-2 col-md-3 col-sm-6 form-group">
         <label for="initials">Voorletters</label>
-        <input class="form-control" id="initials" maxlength="15" name="initials"
-               pattern="^([\s.]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
+        <input class="form-control" id="initials" maxlength="15"
+               name="initials" pattern="^([\s.]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
                patternMismatch="Gebruik alleen hoofdletters, punten of spaties." required
                th:field="*{initials}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-lg-3 col-md-5 col-sm-6 form-group">
         <label for="firstname">Voornaam</label>
-        <input class="form-control" id="firstname" maxlength="25" name="firstName"
-               pattern="^([-\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
+        <input class="form-control" id="firstname" maxlength="25"
+               name="firstName" pattern="^([-\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
                patternMismatch="Gebruik alleen hoofdletters, kleine letters, streepjes of spaties."
                required th:field="*{firstName}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-4 form-group">
         <label for="preposition">Tussenvoegsel</label>
-        <input class="form-control" id="preposition" maxlength="15" name="preposition"
-               pattern="^([-.\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
+        <input class="form-control" id="preposition" maxlength="15"
+               name="preposition" pattern="^([-.\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])*$"
                patternMismatch="Gebruik alleen hoofdletters, kleine letters, streepjes, spaties of punten."
                th:field="*{preposition}" type="text"/>
         <div class="invalid-feedback"></div>
@@ -41,33 +41,26 @@
     </div>
     <div class="col-lg-3 col-md-4 col-sm-6 form-group">
         <label for="dateOfBirth">Geboortedatum</label>
-        <input aria-describedby="dateOfBirthHelp" class="form-control" id="dateOfBirth"
-               name="dateOfBirth" pattern="^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
-               patternMismatch="Format: jjjj-mm-dd" required th:field="*{dateOfBirth}"
-               type="date"/>
+        <input class="form-control" id="dateOfBirth" name="dateOfBirth" pattern="^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
+               patternMismatch="Format: jjjj-mm-dd" required th:field="*{dateOfBirth}" type="date"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-lg-3 col-md-4 col-sm-6 form-group">
         <label for="socialSecurityNumber">Burgerservicenummer (BSN)</label>
-        <input aria-describedby="socialSecurityNumberHelp" class="form-control"
-               id="socialSecurityNumber" maxlength="9" minlength="8"
-               name="socialSecurityNumber" pattern="^[0-9]{8,9}$"
-               patternMismatch="Een geldig BSN bestaat uit 8 of 9 cijfers."
-               required th:field="*{socialSecurityNumber}" type="text"/>
+        <input class="form-control" id="socialSecurityNumber" maxlength="9" minlength="8" name="socialSecurityNumber"
+               pattern="^[0-9]{8,9}$" patternMismatch="Een geldig BSN bestaat uit 8 of 9 cijfers." required
+               th:field="*{socialSecurityNumber}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-8 form-group">
         <label for="email">Emailadres</label>
-        <input class="form-control" id="email" maxlength="45" name="email" required
-               th:field="*{email}" type="email"/>
+        <input class="form-control" id="email" maxlength="45" name="email" required th:field="*{email}" type="email"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-lg-3 col-md-4 col-sm-4 form-group">
         <label for="mobile">Telefoon (mobiel)</label>
-        <input aria-describedby="mobileHelp" class="form-control" id="mobile"
-               maxlength="11" name="mobile" pattern="^[06]{2}-[0-9]{8}$"
-               patternMismatch="Format: 06-12345678"
-               required th:field="*{phone}" type="tel"/>
+        <input class="form-control" id="mobile" maxlength="11" name="phone" pattern="^[06]{2}-[0-9]{8}$"
+               patternMismatch="Format: 06-12345678" required th:field="*{phone}" type="tel"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-md-12 mt-5 mb-3">
@@ -75,34 +68,29 @@
     </div>
     <div class="col-md-2 form-group">
         <label for="postalCode">Postcode</label>
-        <input aria-describedby="postalCodeHelp" class="form-control" id="postalCode"
-               maxlength="7" minlength="6" name="postalCode"
-               pattern="^[1-9][0-9]{3}[\s]?[A-Za-z]{2}$"
-               patternMismatch="Ongeldige postcode."
-               required th:field="*{postalCode}" type="text"/>
+        <input class="form-control" id="postalCode" maxlength="7" minlength="6" name="postalCode"
+               pattern="^[1-9][0-9]{3}[\s]?[A-Za-z]{2}$" patternMismatch="Ongeldige postcode." required
+               th:field="*{postalCode}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-md-2 form-group">
         <label for="homeNumber">Huisnr.</label>
-        <input aria-describedby="homeNumberHelp" class="form-control" id="homeNumber"
-               maxlength="10" name="homeNumber" pattern="([-.,&_`() ]|[A-z0-9])+"
-               patternMismatch="Ongeldig huisnummer."
-               required th:field="*{homeNumber}" type="text"/>
+        <input class="form-control" id="homeNumber" maxlength="10" name="homeNumber" pattern="([-.,&_`() ]|[A-z0-9])+"
+               patternMismatch="Ongeldig huisnummer." required th:field="*{homeNumber}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-md-4 form-group">
         <label for="street">Straat</label>
         <input class="form-control" id="street" maxlength="45" name="street"
                pattern="^([-.\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
-               patternMismatch="Ongeldige straatnaam." required
-               th:field="*{street}" type="text"/>
+               patternMismatch="Ongeldige straatnaam." required th:field="*{street}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-md-4 form-group">
         <label for="residence">Woonplaats</label>
         <input class="form-control" id="residence" maxlength="45" name="residence"
-               pattern="([\d\w])+" patternMismatch="Ongeldige plaatsnaam."
-               required th:field="*{residence}" type="text"/>
+               pattern="^([-.\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
+               patternMismatch="Ongeldige plaatsnaam." required th:field="*{residence}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-md-12 mt-5 mb-3">
@@ -110,30 +98,25 @@
     </div>
     <div class="col-xl-3 col-lg-3 col-md-4 form-group">
         <label for="username_private">Gebruikersnaam</label>
-        <input class="form-control" id="username_private"
-               maxlength="16" minlength="4" name="userName"
-               pattern="^[A-Za-z0-9_]+$"
-               patternMismatch="Alleen hoofdletters, kleine letters, cijfers  of underscore."
+        <input class="form-control" id="username_private" maxlength="16" minlength="4" name="userName"
+               pattern="^[A-Za-z0-9_]+$" patternMismatch="Alleen hoofdletters, kleine letters, cijfers  of underscore."
                required th:field="*{userName}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-xl-3 col-lg-3 col-md-4 form-group">
         <label for="password_private">Wachtwoord</label>
-        <input class="form-control" id="password_private"
-               matchField="passwordConfirmation" maxlength="16" minlength="6"
+        <input class="form-control" id="password_private" matchField="passwordConfirmation" maxlength="16" minlength="6"
                name="password" noMatchMessage="Wachtwoorden komen niet overeen."
-               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{0,}$"
+               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]*$"
                patternMismatch="Gebruik minimaal één hoofdletter, kleine letter, cijfer en speciaal teken."
                required th:field="*{password}" type="password"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-xl-3 col-lg-3 col-md-4 form-group">
         <label for="password_private_confirmation">Bevestig wachtwoord</label>
-        <input class="form-control" id="password_private_confirmation"
-               matchField="password" maxlength="16" minlength="6"
-               name="passwordConfirmation"
-               noMatchMessage="Wachtwoorden komen niet overeen."
-               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{0,}$"
+        <input class="form-control" id="password_private_confirmation" matchField="password" maxlength="16"
+               minlength="6" name="passwordConfirmation" noMatchMessage="Wachtwoorden komen niet overeen."
+               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]*$"
                patternMismatch="Gebruik minimaal één hoofdletter, kleine letter, cijfer en speciaal teken."
                required th:field="*{passwordConfirmation}" type="password"/>
         <div class="invalid-feedback"></div>
@@ -155,8 +138,8 @@
     </div>
     <div class="col-lg-4 col-md-6 col-sm-6 form-group">
         <label for="companyName">Bedrijfsnaam</label>
-        <input class="form-control" id="companyName" maxlength="45"
-               name="companyName" required th:field="*{companyName}" type="text"/>
+        <input class="form-control" id="companyName" maxlength="45" name="companyName" required
+               th:field="*{companyName}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-lg-4 col-md-6 col-sm-6 form-group">
@@ -170,7 +153,8 @@
     </div>
     <div class="col-lg-4 col-md-6 col-sm-6 form-group">
         <label for="kvkNumber">KvK-nummer</label>
-        <input class="form-control" id="kvkNumber" maxlength="8" minlength="8" name="kvkNumber" pattern="^[0-9]{8}$"
+        <input class="form-control" id="kvkNumber" maxlength="8"
+               minlength="8" name="kvkNumber" pattern="^[0-9]{8}$"
                patternMismatch="Een geldig KvK-nummer bestaat uit 8 cijfers." required th:field="*{kvkNumber}"
                tooShort="Een geldig KvK-nummer bestaat uit 8 cijfers." type="text"/>
         <div class="invalid-feedback"></div>
@@ -178,9 +162,8 @@
     <div class="col-lg-4 col-md-6 col-sm-6 form-group">
         <label for="vatNumber">Btw-nummer</label>
         <input class="form-control" id="vatNumber" name="vatNumber" pattern="^(NL)?[0-9]{9}B[0-9]{2}$"
-               patternMismatch="Btw-nummer invoeren met format: NL123456789B01"
-               required
-               th:field="*{vatNumber}" type="text"/>
+               patternMismatch="Btw-nummer invoeren met format: NL123456789B01" required th:field="*{vatNumber}"
+               type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-md-12 mt-5 mb-3">
@@ -188,12 +171,9 @@
     </div>
     <div class="col-lg-2 col-md-3 col-sm-6 form-group">
         <label for="postalCode_legal">Postcode</label>
-        <input aria-describedby="postalCodeHelp" class="form-control"
-               id="postalCode_legal"
-               maxlength="7" minlength="6" name="postalCode"
-               pattern="^[1-9][0-9]{3}[\s]?[A-Za-z]{2}$"
-               patternMismatch="Ongeldige postcode." required th:field="*{postalCode}"
-               type="text"/>
+        <input aria-describedby="postalCodeHelp" class="form-control" id="postalCode_legal" maxlength="7" minlength="6"
+               name="postalCode" pattern="^[1-9][0-9]{3}[\s]?[A-Za-z]{2}$"
+               patternMismatch="Ongeldige postcode." required th:field="*{postalCode}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-lg-2 col-md-3 col-sm-6 form-group">
@@ -207,15 +187,15 @@
     <div class="col-lg-4 col-md-6 col-sm-6 form-group">
         <label for="street_legal">Straat</label>
         <input class="form-control" id="street_legal" maxlength="45" name="street"
-               pattern="^.*[\w\d\s]$" patternMismatch="Ongeldige straatnaam." required
-               th:field="*{street}" type="text"/>
+               pattern="^([-.\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
+               patternMismatch="Ongeldige straatnaam." required th:field="*{street}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-lg-4 col-md-6 col-sm-6 form-group">
         <label for="residence_legal">Woonplaats</label>
         <input class="form-control" id="residence_legal" maxlength="45" name="residence"
-               pattern="([\d\w])+" patternMismatch="Ongeldige plaatsnaam."
-               required th:field="*{residence}" type="text"/>
+               pattern="^([-.\s]|[a-zA-Z0-9]|[À-Ö]|[Ø-ö]|[ø-ǿ]|[Ȁ-ʯ]|[̀-ͯ]|[Ḁ-ỿ]|[Ⅰ-ↈ])+$"
+               patternMismatch="Ongeldige plaatsnaam." required th:field="*{residence}" type="text"/>
         <div class="invalid-feedback"></div>
     </div>
     <div class="col-md-12 mt-5 mb-3">
@@ -223,8 +203,7 @@
     </div>
     <div class="col-xl-3 col-lg-3 col-md-4 form-group">
         <label for="username_legal">Gebruikersnaam</label>
-        <input class="form-control" id="username_legal"
-               maxlength="16" minlength="4" name="userName"
+        <input class="form-control" id="username_legal" maxlength="16" minlength="4" name="userName"
                pattern="^[A-Za-z0-9_]+$"
                patternMismatch="Alleen hoofdletters, kleine letters, cijfers  of underscore."
                required th:field="*{userName}" type="text"/>
@@ -232,10 +211,9 @@
     </div>
     <div class="col-xl-3 col-lg-3 col-md-4 form-group">
         <label for="password_legal">Wachtwoord</label>
-        <input class="form-control" id="password_legal"
-               matchField="passwordConfirmation" maxlength="16" minlength="6"
+        <input class="form-control" id="password_legal" matchField="passwordConfirmation" maxlength="16" minlength="6"
                name="password" noMatchMessage="Wachtwoorden komen niet overeen."
-               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{0,}$"
+               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]*$"
                patternMismatch="Gebruik minimaal één hoofdletter, kleine letter, cijfer en speciaal teken."
                required th:field="*{password}" type="password"/>
         <div class="invalid-feedback"></div>
@@ -243,10 +221,9 @@
     <div class="col-xl-3 col-lg-3 col-md-4 form-group">
         <label for="password_legal_confirmation">Bevestig wachtwoord</label>
         <input class="form-control" id="password_legal_confirmation"
-               matchField="password" maxlength="16" minlength="6"
-               name="passwordConfirmation"
+               matchField="password" maxlength="16" minlength="6" name="passwordConfirmation"
                noMatchMessage="Wachtwoorden komen niet overeen."
-               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{0,}$"
+               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]*$"
                patternMismatch="Gebruik minimaal één hoofdletter, kleine letter, cijfer en speciaal teken."
                required th:field="*{passwordConfirmation}" type="password"/>
         <div class="invalid-feedback"></div>
